# beeai_acp

./: .gitignore  README.md
acpagent_hierarchy_chain/: README.md  hierarchically_chaining.py  pyproject.toml  requirements.txt
acpagent_seq_chain/: README.md  pyproject.toml  requirements.txt  sequential_workflow.py
crewai_acp_rag/: Dockerfile  README.md  pyproject.toml  requirements.txt
crewai_acp_rag/src/crewai_acp_rag/: agent.py  client.py
mcp_server/doctor_mcp_server/: README.md  doctor_info_server.py  doctor_list_sg.json  pyproject.toml  requirements.txt
smolagent_acp_web/: README.md  pyproject.toml  replit.md  requirements.txt
smolagent_acp_web/src/smolagent_acp_web/: client_acp_mcp_call.py  client_example.py  health_agent_server.py  main.py  web_content_extractor.py  web_interface.py
