[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acpagent_seq_chain"
version = "0.1.0"
description = "A project demonstrating a sequential workflow chaining RAG and Web agents to answer complex questions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama",
    "acp-sdk",
]